--- a/imports/ui/users/templatesImages/madre_e_hijo.html
+++ b/imports/ui/users/templatesImages/madre_e_hijo.html
@@ -19,9 +19,11 @@
 
         <div class="col-sm-8 col-sm-offset-2" style="margin-top:400px">
             <div style="width:100%;padding-right:60px">
-                <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1 class="actividad-nombre">{{nombre}}</h1></div>
+                <div style="width:100%;">
+                    {{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}
+                    <a href="actividadInfo/{{_id}}"><h1 class="actividad-nombre">{{nombre}}</h1></a>
+                </div>
             </div>
-
         </div>
         <div class="col-sm-10 col-sm-offset-1" style="height:650px;padding:0;padding-top:50px;" >
             <div style="background-image:url('madre_e_hijo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
