--- a/imports/ui/users/templatesImages/quiroga.html
+++ b/imports/ui/users/templatesImages/quiroga.html
@@ -29,11 +29,11 @@
 
         <div class="col-sm-8 col-sm-offset-2" style="margin-top:400px">
             <div style="width:100%;padding-right:60px">
-                <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1 class="actividad-nombre">{{nombre}}</h1></div>
-                <!--<div style="margin-top:25px;max-height:165px;overflow-y:hidden"><h4><p class="actividad-descripcion">{{texto}}</p></h4></div>-->
-                <!--<div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>-->
+                <div style="width:100%;">
+                    {{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}
+                    <a href="actividadInfo/{{_id}}"><h1 class="actividad-nombre">{{nombre}}</h1></a>
+                </div>
             </div>
-
         </div>
         <div class="col-sm-10 col-sm-offset-1" style="height:650px;margin-top:150px;padding:0;margin-top:150px;padding-top:50px;" >
             <div style="background-image:url('quiroga.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
