working on movile

--- a/imports/ui/users/barraHorizontal.html
+++ b/imports/ui/users/barraHorizontal.html
@@ -23,7 +23,7 @@
     <ul style="margin-left:0px">
         <li  id="dropdownMenuButton" class="dropdown dropup horizontal-menu-item" data-value="mas" style="margin-right:70px">
             <div class="btn-secondary" data-toggle="dropdown" >
-                <a class="glyphicon glyphicon-menu-hamburger" style="color:white;font-size:70px;padding-right:25px;padding-left:25px"></a>
+                <a class="glyphicon glyphicon-menu-hamburger" style="color:white;font-size:4vh;padding-top:0px;padding-right:25px;padding-left:25px"></a>
             </div>
             <div class="dropdown-menu" style="background-color:#171f2a;width: 100vw;padding:25px" aria-labelledby="dropdownMenuButton">
                 <a class="horizontal-menu-item-2 dropdown-item {{#if active "aliados"}}horizontal-menu-item-2-selected{{/if}}"  href="/aliados">Aliados</a>
