--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -203,7 +203,7 @@
         {{>barraHorizontal active="home"}}
     </div>
 {{else}}
-    <div id="nav" class="bottom-menu {{expandedMenuClass}}" style="height:130px;z-index:5">
+    <div id="nav" class="bottom-menu {{expandedMenuClass}}" style="height:8vh;z-index:5">
         {{>barraHorizontalMovil active="home"}}
     </div>
 {{/if}}
