working on movile

--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -289,5 +289,6 @@
     <span class=" navigation-top-max btn btn-lg btn-default" style="position:fixed;bottom:100px;right:15px"><i class="glyphicon glyphicon-arrow-up"></i> </span>
 {{/if}}
     <script type="text/javascript" src="skrollr.min.js"></script>
+    <div class="turnDeviceNotification"></div>
 </template>
 
