--- a/imports/ui/users/templatesImages/museo.html
+++ b/imports/ui/users/templatesImages/museo.html
@@ -1,19 +1,21 @@
 <template name="museo">
     {{#if isDesktop}}
-        <div class="{{#if esPar}}col-md-7 par-left{{else}} col-md-5 impar-left{{/if}}" >
+    <div style="margin-top:150px">
+        <div class="{{#if esPar}}col-md-7 col-sm-7 par-left{{else}} col-md-5 col-sm-5 impar-left{{/if}}" style="margin-top:0px" >
             {{#if esPar}}
                 <div style="background-image:url('museo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
             {{else}}
                 {{>textImpar}}
             {{/if}}
         </div>
-        <div class="{{#if esPar}}col-md-5 par-right{{else}} impar-right col-md-7{{/if}}" >
+        <div class="{{#if esPar}}col-md-5 col-sm-5 par-right{{else}} impar-right col-sm-7 col-md-7{{/if}}" style="margin-top:0px">
             {{#if esPar}}
                 {{>textPar}}
             {{else}}
                 <div style="background-image:url('museo.png');transform: scaleX(-1);background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
 
             {{/if}}
+        </div>
         </div>
     {{else}}
 
