--- a/imports/ui/users/templatesImages/niñoLeyendo.html
+++ b/imports/ui/users/templatesImages/niñoLeyendo.html
@@ -1,6 +1,7 @@
 <template name="niñoLeyendo">
     {{#if isDesktop}}
-        <div class="{{#if esPar}}col-md-7 par-left{{else}} col-md-5 impar-left{{/if}}" >
+    <div style="margin-top:150px">
+        <div class="{{#if esPar}}col-md-7 col-sm-7 par-left{{else}} col-md-5 col-sm-5 impar-left{{/if}}" style="margin-top:0px" >
             {{#if esPar}}
                 {{#if evilMorty}}
                 <div style="text-align:center;background-image:url('nino_leyendo_evil.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%">
@@ -15,7 +16,7 @@
                 {{>textImpar}}
             {{/if}}
         </div>
-        <div class="{{#if esPar}}col-md-5 par-right{{else}} impar-right col-md-7{{/if}}" >
+        <div class="{{#if esPar}}col-md-5 col-sm-5 par-right{{else}} impar-right col-sm-7 col-md-7{{/if}}" style="margin-top:0px" >
             {{#if esPar}}
                 {{>textPar}}
             {{else}}
@@ -30,6 +31,7 @@
                 {{/if}}
 
             {{/if}}
+        </div>
         </div>
     {{else}}
 
