--- a/imports/ui/users/templatesImages/dragon.html
+++ b/imports/ui/users/templatesImages/dragon.html
@@ -2,14 +2,15 @@
     <!--<div class="mobile-margin-top right-continuos mobile-margin-left" style="z-index:-1;background-position:center left;background-image:url('dragon2.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>-->
     <!--<div class="mobile-margin-top mobile-margin-left" style="z-index:-1;background-position:center left;background-image:url('dragon.png'); left:-80px;max-width:2100px;background-repeat: no-repeat;position:absolute;background-size: 100%;width:150vw;height:100%"></div>-->
     {{#if isDesktop}}
-        <div class="{{#if esPar}}col-md-7 par-left{{else}} col-md-5 impar-left{{/if}}" >
-           {{#if esPar}}
+    <div style="margin-top:150px">
+        <div class="{{#if esPar}}col-md-7 col-sm-7 par-left{{else}} col-md-5 col-sm-5 impar-left{{/if}}" style="margin-top:0px" >
+            {{#if esPar}}
             <div style="background-image:url('dragon_definitivo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
            {{else}}
                {{>textImpar}}
            {{/if}}
         </div>
-        <div class="{{#if esPar}}col-md-5 par-right{{else}} impar-right col-md-7{{/if}}" >
+        <div class="{{#if esPar}}col-md-5 col-sm-5 par-right{{else}} impar-right col-sm-7 col-md-7{{/if}}" style="margin-top:0px">
             {{#if esPar}}
                 {{>textPar}}
             {{else}}
@@ -17,6 +18,7 @@
 
             {{/if}}
         </div>
+    </div>
     {{else}}
 
         <div class="col-sm-8 col-sm-offset-2" style="margin-top:400px">
