--- a/imports/ui/users/templatesImages/librocasa.html
+++ b/imports/ui/users/templatesImages/librocasa.html
@@ -3,23 +3,24 @@
     <!--<div class="mobile-margin-top mobile-margin-left" style="z-index:-1;background-position:center left;background-image:url('librocasa.png'); max-width:1700px;left:-50px;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>-->
     <!--<div class="up-and-down mobile-margin-top mobile-margin-left" style="z-index:-1;background-position:center left;background-image:url('dragon1.png'); left:0;background-repeat: no-repeat;position:absolute;background-size: 100%;width:100vw;height:100%"></div>-->
     {{#if isDesktop}}
+    <div style="margin-top:150px">
+        <div class="{{#if esPar}}col-md-7 col-sm-7 par-left{{else}} col-md-5 col-sm-5 impar-left{{/if}}" style="margin-top:0px" >
+            {{#if esPar}}
+                <div style="background-image:url('librocasa.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
+            {{else}}
+                {{>textImpar}}
+            {{/if}}
 
-        <div class="{{#if esPar}}col-md-7 par-left{{else}} col-md-5 impar-left{{/if}}" >
-        {{#if esPar}}
-            <div style="background-image:url('librocasa.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
-        {{else}}
-            {{>textImpar}}
-        {{/if}}
+        </div>
+        <div class="{{#if esPar}}col-md-5 col-sm-5 par-right{{else}} impar-right col-sm-7 col-md-7{{/if}}" style="margin-top:0px">
+            {{#if esPar}}
+                {{>textPar}}
+            {{else}}
+                <div style="background-image:url('librocasa.png');transform: scaleX(-1);background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
 
-    </div>
-    <div class="{{#if esPar}}col-md-5 par-right{{else}} impar-right col-md-7{{/if}}" >
-    {{#if esPar}}
-        {{>textPar}}
-    {{else}}
-        <div style="background-image:url('librocasa.png');transform: scaleX(-1);background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
+            {{/if}}
 
-    {{/if}}
-
+        </div>
     </div>
     {{else}}
 
