--- a/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
+++ b/imports/ui/admin/quienesSomos/quienesSomosAdmin.html
@@ -16,7 +16,7 @@
         <div id="page-content-wrapper" >
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-sm-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                             <h3 class="textoActividad">Presentación:</h3>
