--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -57,56 +57,100 @@
     <!--</div>-->
 <!--</template>-->
 <template name="nosotros">
-<div style="min-width:100wh;min-height:100vh;padding-left:10px;padding-right:10px;">
-    <div class="titulo" style="width:974px;margin:auto;padding-left:25px;padding-right:25px;text-align:center">
-        <div style="width:100%;margin-bottom:10px;height:270px;background-image: url({{presentacionFoto}});background-size:cover; background-repeat:no-repeat;">
 
-        </div>
-        <span style=" font-family:'Montserrat';font-weight: 700;font-size: 30px;line-height:30px;font-style: normal; color:white;">
+    {{#if isDesktop}}
+        <div style="min-width:100wh;min-height:100vh;padding-left:10px;padding-right:10px;">
+            <div class="titulo" style="width:974px;margin:auto;padding-left:25px;padding-right:25px;text-align:center">
+                <div style="width:100%;margin-bottom:10px;height:270px;background-image: url({{presentacionFoto}});background-size:cover; background-repeat:no-repeat;">
+
+                </div>
+                <span style=" font-family:'Montserrat';font-weight: 700;font-size: 30px;line-height:30px;font-style: normal; color:white;">
                 NOSOTROS
             </span>
-    </div>
-    <div style="width:900px;margin:auto">
+            </div>
+            <div style="width:900px;margin:auto">
 
-        <div style="margin-top:20px;padding:10px;width:100%;">
+                <div style="margin-top:20px;padding:10px;width:100%;">
             <span class="" style="text-align:right; font-family: 'Open Sans', sans-serif; color:white; font-size:20px">
                 {{presentacion}}
             </span>
-        </div>
-
-        {{#each personas}}
-            <div class="row" style="padding-bottom:10px;margin-left:0px;margin-right:0px;margin-top:20px;padding-bottom:20px">
-                <div class="col-md-4 col-sm-4" style="padding-left:0px;">
-                    <div style="float:left;padding-top:20px;padding-left: 10px">
-                        <img src="{{urlFoto}}" style="max-width:150px;border-radius: 100%">
-                    </div>
-                </div>
-                <div class="col-md-8 col-sm-8" style="padding-right:0px">
-                    <div style="padding:20px;">
-                        <h3 class="actividad-nombre" style="font-size:18px;">{{nombre}}</h3>
-                        <span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 12px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>
-                    </div>
                 </div>
 
+                {{#each personas}}
+                    <div class="row" style="padding-bottom:10px;margin-left:0px;margin-right:0px;margin-top:20px;padding-bottom:20px">
+                        <div class="col-md-4 col-sm-12" style="padding-left:0px;">
+                            <div style="padding-top:20px;padding-left: 10px">
+                                <img src="{{urlFoto}}" style="max-width:150px;border-radius: 100%">
+                            </div>
+                        </div>
+                        <div class="col-md-8 col-sm-12" style="padding-right:0px">
+                            <div style="padding:20px;">
+                                <h3 class="actividad-nombre" style="font-size:18px;">{{nombre}}</h3>
+                                <span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 12px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>
+                            </div>
+                        </div>
+
+                    </div>
+
+                {{/each}}
+
+                <div class="letritas-container" >
+                    <div style="background-image:url('../letras_lineadetiempo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
+                    <div class="rotation-very-slow " style="background-image:url('../letras_lineadetiempo2.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
+                </div>
             </div>
 
-        {{/each}}
-
-        <div class="letritas-container" >
-            <div style="background-image:url('../letras_lineadetiempo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
-            <div class="rotation-very-slow " style="background-image:url('../letras_lineadetiempo2.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
         </div>
-    </div>
+        <div style="height:60px;width:100%">
 
-</div>
-<div style="height:60px;width:100%">
-
-</div>
-    {{#if isDesktop}}
+        </div>
         <div id="nav" data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}" style="z-index:1">
             {{>barraHorizontal active="nosotros"}}
         </div>
     {{else}}
+        <div style="min-width:100wh;min-height:100vh;">
+            <div class="titulo" style="width:100%;margin:auto;text-align:center">
+                <div style="width:100%;margin-bottom:3vh;height:270px;background-image: url({{presentacionFoto}});background-size:cover; background-repeat:no-repeat;">
+
+                </div>
+                <span style=" font-family:'Montserrat';font-weight: 700;font-size: 4vh;line-height:30px;font-style: normal; color:white;">
+                NOSOTROS
+            </span>
+            </div>
+            <div style="width:900px;margin:auto">
+                <div style="margin-top:2vh;padding:10px;width:100%;">
+            <span class="" style="text-align:right; font-family: 'Open Sans', sans-serif; color:white; font-size:2vh">
+                {{presentacion}}
+            </span>
+                </div>
+                {{#each personas}}
+                    <div class="row" style="padding-bottom:10px;margin-left:0px;margin-right:0px;margin-top:20px;padding-bottom:20px">
+                        <div class="col-md-4 col-sm-12" style="text-align:center">
+                            <div style="padding-top:20px;padding-left: 10px">
+                                <img src="{{urlFoto}}" style="max-width:150px;border-radius: 100%">
+                            </div>
+                        </div>
+                        <div class="col-md-8 col-sm-12" style="padding-right:0px">
+                            <div style="padding:20px;">
+                                <h3 class="actividad-nombre" style="font-size:3vh;">{{nombre}}</h3>
+                                <span style="text-align:right; font-family: 'Open Sans', sans-serif; color:white; font-size:2vh">{{texto}}</span>
+                            </div>
+                        </div>
+
+                    </div>
+
+                {{/each}}
+
+                <div class="letritas-container" >
+                    <div style="background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
+                    <div class="rotation-very-slow " style="background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
+                </div>
+            </div>
+
+        </div>
+        <div style="height:8vh;width:100%">
+
+        </div>
         <div id="nav" data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}" style="height:8vh;z-index:5">
             {{>barraHorizontalMovil active="nosotros"}}
         </div>
