working on movile

--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -43,9 +43,9 @@
     {{else}}
         <div style="min-width:100wh;min-height:100vh;">
             <div class="titulo" style="width:100%;margin:auto;text-align:center">
-                <div style="margin-bottom:10px;width:100%;height:270px;background-image: url('../portada_colaboradores.png');background-size:cover; background-repeat:no-repeat;">
+                <div style="margin-bottom:3vh;width:100%;height:270px;background-image: url('../portada_colaboradores.png');background-size:cover; background-repeat:no-repeat;">
                 </div>
-                <span style=" font-family:'Montserrat';font-weight: 700;font-size: 30px;line-height:30px;font-style: normal; color:white;">
+                <span style=" font-family:'Montserrat';font-weight: 700;font-size: 4vh;line-height:30px;font-style: normal; color:white;">
                 ALIADOS
             </span>
             </div>
