--- a/imports/ui/users/archivo/actividadesArchivo.html
+++ b/imports/ui/users/archivo/actividadesArchivo.html
@@ -1,7 +1,9 @@
 <template name="actividadesArchivo">
     <!--<div class="layer-linea-del-tiempo2" style="z-index:1;max-width:1024px;background-size:contain"></div>-->
     <!--<div class="layer-linea-del-tiempo" style="z-index:1max-width:1024px;background-size:contain"></div>-->
-    <div style="min-width:100wh;min-height:100vh;padding-left:10px;padding-right:10px;">
+    {{#if isDesktop}}
+
+        <div style="min-width:100wh;min-height:100vh;padding-left:10px;padding-right:10px;">
         <div class="titulo" style="width:974px;margin:auto;padding-left:25px;padding-right:25px;text-align:center">
             <div style="width:100%;height:270px;background-image: url('../portada_actividades.png');background-size:cover; background-repeat:no-repeat;">
 
@@ -56,6 +58,60 @@
     <div id="nav" data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}" style="z-index:1">
         {{>barraHorizontal active="actividades"}}
     </div>
+    {{else}}
+        <div style="min-width:100wh;min-height:100vh;padding-left:10px;padding-right:10px;">
+            <div class="titulo" style="width:974px;margin:auto;padding-left:25px;padding-right:25px;text-align:center">
+                <div style="margin-bottom:3vh;width:100%;height:270px;background-image: url('../portada_actividades.png');background-size:cover; background-repeat:no-repeat;">
 
+                </div>
+                <span style=" font-family:'Montserrat';font-weight: 700;font-size: 4vh;line-height:60px;font-style: normal; color:white;">
+                ARCHIVO DE ACTIVIDADES
+            </span>
+            </div>
+            <div style="width:900px;margin:auto">
+                <div style="margin-top:20px;padding:10px;height:3vh;width:100%;background-color:#1d2e39;">
+                    <input class="search-actividad form-control" style="width:30%;height:35px;display:inline" placeholder="Buscar">
+                    <button class="btn btn-primary" style="margin-left:5px;height:35px;padding:4px 12px;background-color:#313a77;border-color:#313a77"><i class="glyphicon glyphicon-search" style="margin-right:3px"></i>Buscar</button>
+                    <span class="" style="{{#unless next}}margin-right:33px;{{/unless}}margin-left:10px;margin-top:10px;float:right;font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:15px;font-style: normal; color:white;">
+                    {{#if prev}}<a class="prev-page" style="cursor:pointer"><i class="glyphicon glyphicon-chevron-left" style="margin-right:10px;color:#da3434"></i></a>{{/if}}
+                        Página: {{currentPage}} de {{totalPages}}
+                        {{#if next}}<a class="next-page" style="cursor:pointer"><i class="glyphicon glyphicon-chevron-right" style="margin-right:10px;color:#da3434"></i></a>{{/if}}
+                </span>
+                </div>
 
+                {{#each actividades}}
+                    <div class="">
+                        <div style="margin-top:20px;padding-top:20px;height:120px;background-color:#1d2e39;">
+                            <div class="col-md-11" style="padding-right:0px">
+                                <div style="">
+                                    <a href="/actividadInfo/{{_id}}" style="text-decoration: none"><h3 class="actividad-nombre" style="font-size:18px;">{{nombre}}</h3></a>
+                                    <span style="font-family:'Montserrat';font-weight: 700;font-size: 14px;line-height:15px;font-style: normal; color:white;">{{fechaInicio}}{{#if fechaFin}} - {{fechaFin}}{{/if}}</span>
+                                    <!--<span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 12px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>-->
+                                </div>
+                            </div>
+                            <div class="col-md-1" style="padding-left:0px;">
+                                <div style="">
+                                    <a  href="/actividadInfo/{{_id}}" class="btn btn-lg" style="background-image:url('../icono_mas.png');background-size:contain;background-repeat:no-repeat;width:60px;height:60px" ></a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                {{/each}}
+
+                <div class="letritas-container" >
+                    <div style="background-image:url('../letras_lineadetiempo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
+                    <div class="rotation-very-slow " style="background-image:url('../letras_lineadetiempo2.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
+                </div>
+            </div>
+
+        </div>
+        <div style="height:8vh;width:100%">
+
+        </div>
+        <div id="nav" data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}" style="height:8vh;z-index:5">
+            {{>barraHorizontalMovil active="actividades"}}
+        </div>
+    {{/if}}
 </template>
