--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -55,6 +55,7 @@
                 {{presentacion}}
             </span>
                 </div>
+                <div class="row">
                 {{#each colaboradores}}
                     <a href="{{url}}">
                         <div class="col-md-4 col-sm-6" style="margin-top:5px">
@@ -68,7 +69,7 @@
                     </a>
 
                 {{/each}}
-
+                </div>
                 <div class="letritas-container" >
                     <div style="background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
                     <div class="rotation-very-slow " style="background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
