--- a/imports/ui/users/actividad/actividad.html
+++ b/imports/ui/users/actividad/actividad.html
@@ -61,9 +61,9 @@
                     <div class="row" style="background-color:#1d2e39;height:90vh;margin-top:10px">
                         <div class="col-md-4" style="height:500px;padding:0px;{{#if caratula}}background-color: #171f2a{{/if}}">
                             {{#if caratula}}
-                                <div style="background-position:center;background-image:url({{caratula}}); background-size:cover; background-repeat:no-repeat; width:100%; height:100%"></div>
+                                <div style="background-position:center;background-image:url({{caratula}}); background-size:contain; background-repeat:no-repeat; width:100%; height:100%"></div>
                             {{else}}
-                                <div style="background-position:center;background-image:url('../{{dibujo}}.png'); background-size:150%; background-repeat:no-repeat; width:100%; height:100%"></div>
+                                <div style="background-position:center;background-image:url('../{{dibujo}}.png'); background-size:contain; background-repeat:no-repeat; width:100%; height:100%"></div>
                             {{/if}}
                         </div>
                         <div class="col-md-8">
