working on movile

--- a/imports/ui/users/archivo/librosArchivo.html
+++ b/imports/ui/users/archivo/librosArchivo.html
@@ -92,7 +92,7 @@
 
         </div>
         <div id="nav" data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}" style="height:8vh;z-index:5">
-            {{>barraHorizontalMovil active="actividades"}}
+            {{>barraHorizontalMovil active="libros"}}
         </div>
     {{/if}}
 </template>
