--- a/imports/ui/users/archivo/librosArchivo.html
+++ b/imports/ui/users/archivo/librosArchivo.html
@@ -82,8 +82,8 @@
                 {{/each}}
                 </div>
                 <div class="letritas-container" >
-                    <div style="background-image:url('../letras_lineadetiempo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
-                    <div class="rotation-very-slow " style="background-image:url('../letras_lineadetiempo2.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
+                    <div style="background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
+                    <div class="rotation-very-slow " style="background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
                 </div>
             </div>
 
