--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -58,10 +58,10 @@
                 <div class="row">
                 {{#each colaboradores}}
                     <a href="{{url}}">
-                        <div class="col-md-4 col-sm-6" style="margin-top:5px">
-                        <div class="logo-button" style="border-width:0px;height:330px;overflow-y: hidden;display:table">
-                            <div style="padding:10px;display:table-cell;vertical-align: middle;max-height: 330px">
-                                <img src="{{urlFoto}}" style="width:100%;height:auto;border-radius: 0%;max-height: 330px">
+                        <div class="col-md-4 col-sm-5 col-sm-offset-1" style="margin-top:5px">
+                        <div class="logo-button" style="border-width:0px;height:500px;overflow-y: hidden;display:table">
+                            <div style="padding:10px;display:table-cell;vertical-align: middle;max-height: 500px">
+                                <img src="{{urlFoto}}" style="width:100%;height:auto;border-radius: 0%;max-height: 500px">
                             </div>
                         </div>
                         <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
