--- a/imports/ui/users/notFound.html
+++ b/imports/ui/users/notFound.html
@@ -2,7 +2,7 @@
     <div style="width:100vw;height:100vh;position:relative;background-color: #2d3e54">
         <div class="row">
         <div class="col-md-offset-3 col-md-6">
-            <img src="cabra4.gif" loop=infinite style="margin:auto;width:100%;margin-bottom:20px;display:block"/>
+            <img src="cabra4.gif" loop=infinite style="margin:auto;width:100%;margin-top:20px;margin-bottom:20px;display:block"/>
             <span style="font-family:'Montserrat';font-weight: 700;font-size: 30px;line-height:30px;font-style: normal; color:white;">
                 404 - Una cabra se comió tu página.
             </span>
